--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -49,5 +49,6 @@
 <script src="../js/main_page.js"></script>
 <script src="../js/token.js"></script>
 <script src="../js/fund.js"></script>
+<script src="../js/marketplace.js"></script>
 </body>
 </html>
