--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @use '../pages/main-page/main-page.scss';
 @use '../pages/token/token.scss';
 @use '../pages/fund/fund.scss';
-
+@use '../pages/marketplace/marketplace.scss';
 
 @use './variables.scss' as variables;
 
