main_page adapted to mobile

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -147,3 +147,83 @@
     right: -270px;
     top: -50px;
 }
+
+
+//FOOTER MOBILE 
+
+@media (max-width: 480px) {
+.footer-container {
+  max-width: 375px;
+  padding-top: 65px;
+  padding-bottom: 7px;
+  border-top: 1px solid #fff;
+  position: relative;
+}
+.footer-content {
+  flex-direction: column;
+  max-width: 375px;
+  min-width: auto;
+  gap: 24px;
+}
+.footer-menu {
+  flex-direction: column;
+  align-items: center;
+}
+.footer-navigation {
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 24px;
+}
+.footer-navigation a {
+    font-size: 18px;
+}
+
+.footer-nav-separator {
+  display: none;
+}
+.footer-language-select {
+  display: none;
+}
+
+.footer-contacts {
+  gap: 8px;
+}
+
+.footer-btn-buy,.footer-btn-contact {
+  font-size: 16px;
+  padding: 14px 15px;
+  width: 91px;
+  height: 20px;
+  box-sizing: content-box;
+}
+
+.footer-second {
+  justify-content: center;
+}
+
+.footer-logo {
+  position: absolute;
+  font-size: 14px;
+  min-width: 120px;
+  top: -42px;
+}
+
+.footer-logo p {
+  margin-left: 5px;
+}
+
+.footer-logo-icon {
+  width: 27px;
+  height: 27px;
+}
+
+.footer-credits {
+  font-size: 9px;
+  min-width: auto;
+  max-width: 316px;
+  text-align: center;
+}
+  .footer-coins-img {
+    display: none;
+  }
+}
