--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -21,7 +21,11 @@
     <p>Finity Touch</p>
 </div>
 
-
+  <button class="burger-btn" aria-label="Toggle menu">
+    <svg class="header-burger-icon" width="30" height="16">
+        <use href="img/symbol-defs.svg#icon-Vector"></use>
+    </svg>
+  </button>
 
 <div class="header-menu">
     <div class="header-actions">
