--- a/src/pages/fund/fund.scss
+++ b/src/pages/fund/fund.scss
@@ -268,7 +268,7 @@
 // FAQ
 
 
-.main-faq-section-container {
+.main-faq-section-container.fund {
   margin: 0 auto;
   max-width: 1520px;
   display: flex;
@@ -310,7 +310,7 @@
   margin-bottom: 0;
 }
 
-.main-faq-question {
+.main-faq-question.fund {
   width: 100%;
   // height: 95px;
   background: transparent;
@@ -327,7 +327,7 @@
   outline: none;
 }
 
-.main-faq-question .toggle {
+.main-faq-question.fund .toggle {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -341,7 +341,7 @@
   transition: transform 0.3s ease;
 }
 
-.main-faq-answer {
+.main-faq-answer.fund {
   font-size: 19px;
   line-height: 180%;
   max-height: 0;
@@ -352,15 +352,6 @@
   font-size: 14px;
   color: #aaa;
   transition: max-height 0.3s ease, padding 0.3s ease;
-}
-
-.main-faq-item.active .main-faq-answer {
-  max-height: 150px; 
-  padding: 15px 20px;
-}
-
-.main-faq-item.active .main-faq-question .toggle {
-  transform: rotate(45deg);
 }
 
 
